# infinidata

./: Cargo.toml  README.md  pytests.py
html/infinidata/: index.html  infinidata.html
src/: lib.rs
