[package]
name = "infinidata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "infinidata"
crate-type = ["cdylib"]

[dependencies]
memmap = "0.7.0"
numpy = "0.20.0"
pyo3 = "0.20.1"
rand = "0.8.5"
rkyv = { version = "0.7.43", default-features = false, features = [
    "alloc",
    "size_64",
    "std",
    "uuid",
    "validation",
] }
uuid = { version = "1.6.1", features = ["v4"] }
